--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,37 @@
+body {
+    background: url('../images/multi-color-haze-background.jpg');
+}
+
+p {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    line-height: 1.25;
+
+}
+.bignum {
+    font-size: 48px;
+
+}
+.bg-white {
+    background: rgba(250, 250, 250, 0.5);
+    color: rgba(25, 2, 110,1);
+    /* align-content: center; */
+    text-align: center;
+}
+.fullshade {
+    background: rgba(25, 2, 110, 0.75);
+    color: rgba(250, 250, 250,1);
+}
+.shade {
+    background: rgba(25, 2, 110, 0.5);
+    color: rgba(250, 250, 250,1);
+}
 .crystalimg {
-    width: 50px;
+    display:inline-block;
+    width: 80px;
     height: auto;
-    float: left;
-    margin: 20px;
+    /* float: left; */
+    margin: 10px 20px;
+}
+.score {
+    font-size: 24px;
 }
